# salus-wave-communicator

./: .gitignore  README.md  app.py  cron.py  pyproject.toml
etc/: config.dist.yaml
lib/heathub/: utils.py
lib/heathub/bathroom/: salus.py
lib/wave/: BaseBot.py  README.md  SetBot.py  StatusBot.py  WaveThermo.py  utils.py
systemd/: salus.cron.service  salus.cron.timer  salus.service
templates/: base.html  index.html
